<resources>
    <string name="app_name">Switch Style</string>
    <string name="buttonText">Comenzar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="comenzar">Comenzar</string>
    <string name="contrarar_contrase_a">Recuperar contraseña</string>
    <string name="olvidasenia">Contraseña</string>
    <string name="recupeste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="emaila">Email</string>
    <string name="nombre">Nombre</string>
    <string name="tiene_cuenta_login">Ya tiene una cuenta? Loguese</string>
    <string name="olvido_su_contrase_aa">Olvido su contraseña</string>
    <string name="emailaa">Email</string>
    <string name="todo1">TODO</string>
    <string name="email1">Email</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="olvido_su_contrase_a1">Olvido su contraseña</string>
    <string name="iniciar_sesion1">Iniciar sesion</string>
    <string name="todo">TODO</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="olvidaste_la_contrase_a">¿Olvidaste la contraseña?</string>
    <string name="contrasenia">Contraseña</string>
    <string name="bienvenida_detallada">¡Prepárate para descubrir un mundo donde la moda y la tecnología se unen para transformar tu estilo de vida. Con nuestra app, llevas Switch Style siempre contigo, ofreciéndote acceso rápido y exclusivo a las últimas tendencias, promociones y todo lo que nuestro sitio web tiene para ti. Esto no es solo una aplicación, es tu puerta a un universo de estilo único y personalizado. Vive Switch Style a tu ritmo, con la comodidad y pasión que solo nosotros te podemos brindar.</string>
    <string name="bienvenidos_a_switch_style">Bienvenidos a Switch Style!</string>
    <string name="todo12">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo223">TODO</string>
    <string name="catalogo2">Catalogo</string>
    <string name="usuario2">Usuario</string>
    <string name="inicio2">Inicio</string>

        <!-- Errores en registro -->
        <string name="error_campos_vacios">Por favor, complete todos los campos</string>
        <string name="error_nombre_vacio">El nombre no puede estar vacío</string>
        <string name="error_email_vacio">El correo electrónico no puede estar vacío</string>
        <string name="error_contraseña_vacia">La contraseña no puede estar vacía</string>
        <string name="error_contraseña_corta">La contraseña debe tener al menos 6 caracteres</string>
        <string name="error_email_existente">El correo electrónico ya está en uso</string>
        <string name="error_registro_generico">Error al registrar usuario</string>

        <!-- Mensajes de éxito -->
        <string name="registro_exitoso">Registro exitoso</string>

        <!-- Navigation Bar -->
        <string name="nav_home">Inicio</string>
        <string name="nav_register">Registro</string>
        <string name="nav_catalogs">Catálogos</string>

        <!-- Descripciones para iconos -->
        <string name="nav_home_desc">Ir a inicio</string>
        <string name="nav_register_desc">Ir a registro</string>
        <string name="nav_catalogs_desc">Ir a catálogos</string>
        <string name="registro_title">Registro</string>
    <string name="inicio">Inicio</string>
    <string name="usuario">Usuario</string>
    <string name="catalogo">Catalogo</string>
    <string name="like">Me gusta</string>
    <string name="image">Imagen de producto</string>
    <string name="registro_boton">Ir al registro o el login</string>
    <string name="_1_3">1/3</string>
    <string name="contador_imagenes">%1$d/%2$d</string>
    <string name="_1_32">1/3</string>
    <string name="debes_iniciar_sesi_n_o_registrarte_para_acceder_al_cat_logo">Debes iniciar sesión o registrarte para acceder al catálogo</string>
    <string name="iniciar_sesion_o_registrarse">Iniciar Sesion o Registrarse</string>
    <string name="apellido">Apellido</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="_1">1</string>

</resources>