<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="641dp">

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="411dp"
        android:layout_height="483dp"
        android:layout_marginTop="83dp"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="239dp"
            android:layout_height="120dp"
            android:layout_marginStart="85dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/icono_aplicacion_foreground" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/boton_recuperar"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="25dp"
            android:background="#4B422A"
            android:text="@string/olvido_su_contrase_aa"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/login"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="145dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="64dp"
            android:background="#4B422A"
            android:minHeight="48dp"
            android:text="@string/action_sign_in"
            android:textColor="#FFFFFF"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="203dp"
        android:layout_height="182dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="225dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="15dp"
        android:background="#9C93710A"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.971">

    </LinearLayout>

</android.support.constraint.ConstraintLayout>